// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FasterPaymentsSystem desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFasterPaymentsSystem YpcFasterPaymentsSystem_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_faster-payments-system YpcIcon_width_xl YpcIcon_height_s YpcFasterPaymentsSystem-Icon YpcFasterPaymentsSystem-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      СБП
    </h4>
  </div>
</article>
`;

exports[`FasterPaymentsSystem desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFasterPaymentsSystem YpcFasterPaymentsSystem_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_faster-payments-system YpcIcon_width_xl YpcIcon_height_s YpcFasterPaymentsSystem-Icon YpcFasterPaymentsSystem-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      СБП
    </h4>
  </div>
</article>
`;

exports[`FasterPaymentsSystem desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcFasterPaymentsSystem YpcFasterPaymentsSystem_view_vertical"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_faster-payments-system YpcIcon_width_xl YpcIcon_height_s YpcFasterPaymentsSystem-Icon YpcFasterPaymentsSystem-Icon_view_vertical"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      СБП
    </h4>
  </div>
</article>
`;

exports[`FasterPaymentsSystem touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFasterPaymentsSystem YpcFasterPaymentsSystem_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_faster-payments-system YpcIcon_width_xl YpcIcon_height_s YpcFasterPaymentsSystem-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      СБП
    </h4>
  </div>
</article>
`;

exports[`FasterPaymentsSystem touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFasterPaymentsSystem YpcFasterPaymentsSystem_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_faster-payments-system YpcIcon_width_xl YpcIcon_height_s YpcFasterPaymentsSystem-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      СБП
    </h4>
  </div>
</article>
`;

exports[`FasterPaymentsSystem touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcFasterPaymentsSystem YpcFasterPaymentsSystem_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_faster-payments-system YpcIcon_width_xl YpcIcon_height_s YpcFasterPaymentsSystem-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      СБП
    </h4>
  </div>
</article>
`;
